segundo commit prueba

--- a/index.html
+++ b/index.html
@@ -1,14 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Limbu&family=Noto+Sans:wght@500&display=swap" rel="stylesheet"> 
+    <title>Neil Aular</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
+
 <body>
-    <h1>
-        Portafolio
-    </h1>
+    <section id="Acerca-de-mi" class="container text-center my-5">
+
+
+        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+
+        <p class="my-4">
+            Hola Soy Neil, me dedico a ser blogger de viajes, tambien puedo ser tu guia turistica y te doy tips con los idiomas para
+            que puedas viajar teniendo una mejor experiencia <span class="carita"><strong>=)</strong>.</span>
+        </p>
+
+
+        <div class="row">
+            <div class="col-12 col-md-4">
+                <i class="fas fa-camera-retro icon"></i>
+                <h3 class="my-3 fw-bold">Fotógrafa de comidas de nuestro mundo</h3>
+                <p class="my-3">
+                    “Aca te dire un lugar del mundo para desayunar,
+                    otro para tomar el aperitivo y lo mismo para la comida, la merienda, la cena"…
+                </p>
+            </div>
+            <div class="col-12 col-md-4">
+                <i class="fas fa-bullhorn icon"></i>
+                <h3 class="my-3 fw-bold">Críticas culinarias </h3>
+                <p class="my-3">
+                    “Aca te contare de mis experiencias por los restaurantes y demas lugares del mundo”…
+                </p>
+            </div>
+            <div class="col-12 col-md-4">
+                <i class="fas fa-map-marked-alt icon"></i>
+                <h3 class="my-3 fw-bold">Aca te dejo mis mapas de cada país que he visitado</h3>
+                <p class="my-3">
+                    “Aca te dare los mapas digitales para facilitarte y ayudarte de guia segun los paises que he visitado"…
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos más recientes</h2>
+
+        <div class="row">
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card">
+                    <div class="image-top" style="background-image: url(./assets/imgs/curriculum-shakira-1.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold"> La mas rica pizza carbonara de Italia </h5>
+                        <p class="card-text">
+                            “Es esta sin duda la mejor pizza que me he comido hasta ahora, es en Italia, el restaurante se llama "La llama loca"
+                            y es atendida por sus dueños desde dos generaciones atras, es la mejor salsa que he probado en mi vida,
+                            es artesanal, tiene la cantidad perfecta de quesos, con el cocinado a leña que no puede faltar”…
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card">
+                    <div class="image-top" style="background-image: url(assets/img/holland-rest.jpg)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">La mas divertida cafeteria/bar de Holanda</h5>
+                        <p class="card-text">
+                            “Si, leiste bien esta es una cafeteria bar la cual vas por tus ricas panquecas y al mismo tiempo 
+                            lo acompañas con un tequila, asi lo recomiendo, lo mejor de Mexico y lo mejor de Holanda juntos.
+                            A veces si cuentas con la suerte podras ver un baile sensual en el tubo mientras desayunas, empezando
+                            el dia con muchas energias”…
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 py-2">
+                <div class="card">
+                    <div class="image-top" style="background-image: url(assets/img/map-paris.webp)"></div>
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Hoy toco en la seccion: "soy el mapa", París.</h5>
+                        <p class="card-text">
+                            “Holaaaa espero estes de viaje y diviertiendote mucho, aca te dejo toda mi ruta en París, con todos 
+                            los sitios que visite y todo lo que hice, tambien aparte del link para el mapa digital por google maps,
+                            tambien tendras un detalle por precio de todo lo visitado, basandose en el "no me importa el dinero"
+                            y experiencia "BBB" las famosas 3 B que todos queremos”…
+                        </p>
+                        <button type="button" class="btn btn-outline-info">
+                            Ver más
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <section id="Contacto" class="container my-5">
+
+        <h2 class="display-4 fw-bold text-center my-4 contactame">Contáctame</h2>
+
+        <p class="text-center my-4 d-none d-md-block pregunta">¿Se te ocurre decirme algo?</p>
+        <p class="text-center my-4 d-none d-md-block respuesta"><strong>-</strong>Aca estare.</p>
+        <form>
+
+
+            <div class="form-group mb-4">
+                <label class="mb-2">Nombre<strong>:</strong></label>
+                <input class="form-control" placeholder="Quien tu ERE?">
+            </div>
+
+            <div class="form-group mb-4">
+                <label class="mb-2">Correo electrónico<strong>:</strong></label>
+                <input class="form-control" placeholder="No uses Hotmail PLS" />
+            </div>
+
+
+            <div class="form-group">
+                <label class="mb-2">Mensaje<strong>:</strong></label>
+                <textarea class="form-control" placeholder="Talk To Meee!"></textarea>
+            </div>
+
+            <div class="my-3 text-end">
+                <button class="btn btn-info text-light">Enviar</button>
+            </div>
+
+
+
+        </form>
+
+    </section>
+
+
+
+    <footer class="bg-dark text-center text-light p-4">
+        <p class="mb-0 footer"><strong>Neil Aular 2022.</strong> Todos los derechos reservados.</p>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
