arreglado de los texto de las tarjetas, y un poco de arreglado en CSS

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 es el que más le tengo aprecio pues fue el que me hizo querer
                 darle un giro a mi vida y enfocarme en aprender sobre este
                 maravilloso mundo que es el desarrollo web, en el cual deseo
-                formar parte activa en un futuro”
+                formar parte activa en un futuro.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -232,14 +232,11 @@
             </div>
             <div class="card-body">
               <h5 class="card-title fw-bold">
-                Proyecto en HTML sobre el Curriculum de nuestra querida Shakira.
+                Proyecto en HTML con un poco de CSS.
               </h5>
               <p class="card-text">
-                “Este fue mi primer proyecto, es demasiado simple, sin embargo
-                es el que más le tengo aprecio pues fue el que me hizo querer
-                darle un giro a mi vida y enfocarme en aprender sobre este
-                maravilloso mundo que es el desarrollo web, en el cual deseo
-                formar parte activa en un futuro”
+                “Este fue mi segundo proyecto, es un landing page de ventas de las queridas cartas Magic®, en este
+                proyecto conoci un poco sobre como ir ordenando un poco una página Web.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -306,14 +303,11 @@
             </div>
             <div class="card-body">
               <h5 class="card-title fw-bold">
-                Proyecto en HTML sobre el Curriculum de nuestra querida Shakira.
+                Proyecto en HTML, CSS y un poco de Bootstrap.
               </h5>
               <p class="card-text">
-                “Este fue mi primer proyecto, es demasiado simple, sin embargo
-                es el que más le tengo aprecio pues fue el que me hizo querer
-                darle un giro a mi vida y enfocarme en aprender sobre este
-                maravilloso mundo que es el desarrollo web, en el cual deseo
-                formar parte activa en un futuro”
+                “Este fue mi tercer proyecto, es una landing page de cupones, aca fue un reto pues conocía por primera vez
+                a Bootstrap y también  las clases de bootstrap, y como ordenarlas según la pantalla en la cúal se visualice.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -380,14 +374,11 @@
             </div>
             <div class="card-body">
               <h5 class="card-title fw-bold">
-                Proyecto en HTML sobre el Curriculum de nuestra querida Shakira.
+                Proyecto en HTML y CSS, sobre las lindas y amadas Iguanas.
               </h5>
               <p class="card-text">
-                “Este fue mi primer proyecto, es demasiado simple, sin embargo
-                es el que más le tengo aprecio pues fue el que me hizo querer
-                darle un giro a mi vida y enfocarme en aprender sobre este
-                maravilloso mundo que es el desarrollo web, en el cual deseo
-                formar parte activa en un futuro”
+                “En este cuarto proyecto, se baso en el posicionamiento de el contenido, eso fue el reto en este proyecto,
+                se ve bastante bonito también por las imágenes tan profesionales que tiene.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -454,14 +445,12 @@
             </div>
             <div class="card-body">
               <h5 class="card-title fw-bold">
-                Proyecto en HTML sobre el Curriculum de nuestra querida Shakira.
+                En proyecto se llevo a cabo con todo mi conocimiento hasta este momento.
               </h5>
               <p class="card-text">
-                “Este fue mi primer proyecto, es demasiado simple, sin embargo
-                es el que más le tengo aprecio pues fue el que me hizo querer
-                darle un giro a mi vida y enfocarme en aprender sobre este
-                maravilloso mundo que es el desarrollo web, en el cual deseo
-                formar parte activa en un futuro”
+                “Este es mi quinto proyecto y se trata de una landing page de un blogger de viaje, aca use todas las tecnologias
+                que conozco hasta ahora, siendo una de las partes que más me costo llevar a cabo fue el dominio de los tamaño de las imagenes en las 
+                tarjetas de presentación de cada proyecto.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
