se arreglo el texto en las cards

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section id="Acerca-de-mi" class="container text-center-2 p-4">
         <h2 class="display-3 fw-bold my-5">Acerca de mi</h2>
         <p class="text-acerca-de-mi my-5">
-          Hola Soy Neil, me dedicó a manejar las siguientes tecnología:
+          Hola Soy Neil, me dedicó a manejar las siguientes tecnologías:
           <strong>HTML</strong>
           ,
           <strong>CSS</strong>
@@ -87,9 +87,8 @@
           <strong>Bootstrap</strong>
           y
           <strong>Git</strong>
-          por ahora, para en un futuro seguir aprendiendo más tecnología y así
-          volverme un "programador web Junior" y empezar mi camino en este
-          maravilloso mundo del desarrollo de Software
+          por ahora, para en un futuro seguir aprendiendo más tecnologías y así
+          volverme un "programador Web Junior" y seguir mi camino en el mundo del desarrollo de Software
           <span class="carita">
             <strong>=)</strong>
           </span>
@@ -120,14 +119,14 @@
                   <img
                     src="./assets/imgs/shakira.jpg"
                     class="d-block imagen-carrusel"
-                    alt="..."
+                    alt="selfie de shakira"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="./assets/imgs/curriculum-shakira-1.jpg"
                     class="d-block imagen-carrusel"
-                    alt="..."
+                    alt="capture del primer proyecto"
                   />
                 </div>
               </div>
@@ -235,8 +234,8 @@
                 Proyecto en HTML con un poco de CSS.
               </h5>
               <p class="card-text">
-                “Este fue mi segundo proyecto, es un landing page de ventas de las queridas cartas Magic®, en este
-                proyecto conoci un poco sobre como ir ordenando un poco una página Web.”
+                “Este fue mi segundo proyecto, es un landing page de ventas de las cartas Magic®, en este
+                proyecto conocí un poco sobre como ir ordenando una página Web.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -306,8 +305,8 @@
                 Proyecto en HTML, CSS y un poco de Bootstrap.
               </h5>
               <p class="card-text">
-                “Este fue mi tercer proyecto, es una landing page de cupones, aca fue un reto pues conocía por primera vez
-                a Bootstrap y también  las clases de bootstrap, y como ordenarlas según la pantalla en la cúal se visualice.”
+                “Este fue mi tercer proyecto, es una landing page de cupones, acá fue un reto pues conocía por primera vez
+                a Bootstrap  y su sistema de grillas.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -378,7 +377,7 @@
               </h5>
               <p class="card-text">
                 “En este cuarto proyecto, se baso en el posicionamiento de el contenido, eso fue el reto en este proyecto,
-                se ve bastante bonito también por las imágenes tan profesionales que tiene.”
+                se ve bastante bonito por las imágenes tan profesionales que tiene la pagina web.”
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -448,8 +447,8 @@
                 En proyecto se llevo a cabo con todo mi conocimiento hasta este momento.
               </h5>
               <p class="card-text">
-                “Este es mi quinto proyecto y se trata de una landing page de un blogger de viaje, aca use todas las tecnologias
-                que conozco hasta ahora, siendo una de las partes que más me costo llevar a cabo fue el dominio de los tamaño de las imagenes en las 
+                “Este es mi quinto proyecto y se trata de una landing page de un Blogger de viaje, acá use todas las tecnologías 
+                que conozco hasta ahora, siendo una de las partes que más me costó llevar a cabo fue el dominio del tamaño de las imágenes en las  
                 tarjetas de presentación de cada proyecto.”
               </p>
               <div class="d-flex justify-content-end">
